--- a/templates/brooklyn/css/webstore-light.css
+++ b/templates/brooklyn/css/webstore-light.css
@@ -259,6 +259,9 @@ p.products_slider { font-size: 14px; font-weight: bold; margin: 8px 0 0 5px; col
 #footer .bottomtabs a { font-size: 1.1em; font-weight: 400; }
 #footer .copyright { text-align: center; text-transform: uppercase; color: #b7b7b7; font-size: 0.8em;  }
 
+/***** Email Cart *****/
+#emailcart { background-color: white; width: 600px; height: 400px; padding: 20px;}
+#emailcart textarea { width: 520px; height: 50px;}
 
 /***** Global adjustments as we resize down ******/
 @media only screen and (max-width: 960px) { /*iPad and below */
